--- a/.github/workflows/build-pbrp.yml
+++ b/.github/workflows/build-pbrp.yml
@@ -8,58 +8,136 @@ on:
         required: true
         default: 'X6885'
       device_manufacturer:
-        description: 'Manufacturer (e.g., infinix, tecno, itel)'
+        description: 'Manufacturer (infinix/tecno/itel)'
         required: true
         default: 'infinix'
       build_type:
         description: 'Build Type'
         required: true
-        default: 'recovery'
+        default: 'vendorboot'
         type: choice
         options:
+          - vendorboot
           - recovery
           - boot
-          - vendorboot
-      upload_to_release:
-        description: 'Upload to Release'
+      use_uploaded_files:
+        description: 'Use uploaded device files?'
         required: true
         default: true
         type: boolean
 
-  push:
-    branches: [ main, master, android-12.1 ]
-    paths-ignore:
-      - '**.md'
-      - '.gitignore'
-
-  pull_request:
-    branches: [ main, master ]
-
 env:
-  # Build Configuration
   MANIFEST_URL: https://github.com/PitchBlackRecoveryProject/manifest_pb
   MANIFEST_BRANCH: android-12.1
-  DEVICE_PATH: device/${{ github.event.inputs.device_manufacturer || 'infinix' }}/${{ github.event.inputs.device_codename || 'X6885' }}
-  TARGET_ARCH: arm64
-  TZ: Asia/Jagos
+  TZ: Asia/Jakarta
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
-    timeout-minutes: 120
+  prepare-files:
+    runs-on: ubuntu-latest
+    outputs:
+      has_files: ${{ steps.check-files.outputs.has_files }}
+      codename: ${{ steps.vars.outputs.codename }}
+      manufacturer: ${{ steps.vars.outputs.manufacturer }}
     
     steps:
-      # ==========================================
-      # STEP 1: Setup Environment
-      # ==========================================
       - name: Checkout Device Tree
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      - name: Set Variables
+        id: vars
+        run: |
+          echo "codename=${{ github.event.inputs.device_codename }}" >> $GITHUB_OUTPUT
+          echo "manufacturer=${{ github.event.inputs.device_manufacturer }}" >> $GITHUB_OUTPUT
+
+      # ==========================================
+      # OPSI 1: File di Repository (device-files/)
+      # ==========================================
+      - name: Check Repository Files
+        id: check-files
+        run: |
+          if [ -f "device-files/vendor_boot.img" ]; then
+            echo "✅ Found vendor_boot.img in device-files/"
+            echo "has_files=true" >> $GITHUB_OUTPUT
+          else
+            echo "⚠️ vendor_boot.img not found in device-files/"
+            echo "has_files=false" >> $GITHUB_OUTPUT
+          fi
+
+      # ==========================================
+      # OPSI 2: Upload File Manual (Artifacts)
+      # ==========================================
+      - name: Upload Device Files as Artifacts
+        if: steps.check-files.outputs.has_files == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: device-files-${{ github.event.inputs.device_codename }}
+          path: |
+            device-files/*
+            !device-files/*.md
+          retention-days: 1
+
+  build:
+    runs-on: ubuntu-22.04
+    needs: prepare-files
+    timeout-minutes: 120
+    
+    steps:
+      - name: Checkout Device Tree
+        uses: actions/checkout@v4
+
+      # ==========================================
+      # DOWNLOAD FILE DARI REPO ATAU INPUT
+      # ==========================================
+      - name: Setup Device Files Directory
+        run: |
+          mkdir -p ${{ github.workspace }}/device-files
+          
+          # Jika ada di repo, copy ke workspace
+          if [ -d "${{ github.workspace }}/device-files" ] && [ "$(ls -A ${{ github.workspace }}/device-files/*.img 2>/dev/null)" ]; then
+            echo "✅ Using files from repository"
+          else
+            echo "⚠️ No files in repository, please upload manually"
+          fi
+
+      # ==========================================
+      # OPSI 3: Download dari URL (Google Drive/Direct Link)
+      # ==========================================
+      - name: Download Device Files from URL (Optional)
+        if: false  # Set true jika ingin pakai
+        run: |
+          # Contoh download dari direct link
+          # wget -O device-files/vendor_boot.img "YOUR_DIRECT_LINK"
+          
+          # Atau dari GitHub Releases lain
+          # wget -O device-files/vendor_boot.img "https://github.com/.../vendor_boot.img"
+          
+          echo "Download complete"
+
+      - name: Verify Device Files
+        run: |
+          echo "📂 Checking device files..."
+          ls -lh ${{ github.workspace }}/device-files/ || echo "No files yet"
+          
+          if [ -f "${{ github.workspace }}/device-files/vendor_boot.img" ]; then
+            echo "✅ vendor_boot.img found"
+            echo "Size: $(du -h ${{ github.workspace }}/device-files/vendor_boot.img | cut -f1)"
+            
+            # Verifikasi magic bytes
+            MAGIC=$(xxd -l 8 ${{ github.workspace }}/device-files/vendor_boot.img | head -1)
+            echo "Magic bytes: $MAGIC"
+          else
+            echo "❌ vendor_boot.img not found!"
+            echo "Please place vendor_boot.img in device-files/ directory"
+            exit 1
+          fi
+
+      # ==========================================
+      # SETUP BUILD ENVIRONMENT
+      # ==========================================
       - name: Setup Build Environment
         run: |
-          echo "🔧 Setting up build environment..."
           sudo apt-get update -qq
           sudo apt-get install -y -qq \
             bc bison build-essential ccache curl flex \
@@ -69,205 +147,147 @@ jobs:
             libsdl1.2-dev libssl-dev libwxgtk3.0-gtk3-dev \
             libxml2 libxml2-utils lzop pngcrush rsync \
             schedtool squashfs-tools xsltproc zip zlib1g-dev \
-            libncurses5 python3 python-is-python3
-          
-          # Install repo tool
+            libncurses5 python3 python-is-python3 xxd
+            
           mkdir -p ~/bin
           curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
           chmod a+x ~/bin/repo
           echo "$HOME/bin" >> $GITHUB_PATH
           
-          # Setup ccache
-          export CCACHE_COMPRESSLEVEL=5
-          export CCACHE_MAXSIZE=20G
           ccache -M 20G
-          
-          echo "✅ Environment setup complete"
 
       # ==========================================
-      # STEP 2: Sync PBRP Manifest
+      # SYNC PBRP SOURCE
       # ==========================================
       - name: Sync PBRP Source
         run: |
-          echo "📥 Syncing PBRP source code..."
           mkdir -p ${{ github.workspace }}/workspace
           cd ${{ github.workspace }}/workspace
           
-          # Initialize repo
           repo init --depth=1 -u ${{ env.MANIFEST_URL }} -b ${{ env.MANIFEST_BRANCH }} --git-lfs
-          
-          # Sync with optimized settings
           repo sync -c --force-sync --optimized-fetch --no-tags --no-clone-bundle --prune -j$(nproc --all)
-          
-          echo "✅ Source sync complete"
-          
-          # Show synced source info
-          cd bootable/recovery
-          echo "PBRP Version: $(git log -1 --format=%s || echo 'Unknown')"
 
       # ==========================================
-      # STEP 3: Place Device Tree
+      # EXTRACT VENDOR_BOOT & GENERATE DEVICE TREE
       # ==========================================
-      - name: Place Device Tree
+      - name: Generate Device Tree from vendor_boot
         run: |
-          echo "📂 Placing device tree..."
-          MANUFACTURER="${{ github.event.inputs.device_manufacturer || 'infinix' }}"
-          CODENAME="${{ github.event.inputs.device_codename || 'X6885' }}"
-          DEVICE_PATH="device/$MANUFACTURER/$CODENAME"
+          CODENAME="${{ github.event.inputs.device_codename }}"
+          MANUFACTURER="${{ github.event.inputs.device_manufacturer }}"
+          DEVICE_PATH="${{ github.workspace }}/workspace/device/$MANUFACTURER/$CODENAME"
           
-          # Create directory structure
-          mkdir -p ${{ github.workspace }}/workspace/$DEVICE_PATH
+          mkdir -p $DEVICE_PATH
           
-          # Copy device tree files
-          cp -r ${{ github.workspace }}/* ${{ github.workspace }}/workspace/$DEVICE_PATH/ || true
+          # Copy generator script
+          cp ${{ github.workspace }}/transsion_pbrp_gen.py ${{ github.workspace }}/workspace/
           
-          # Remove unnecessary files from device tree
-          cd ${{ github.workspace }}/workspace/$DEVICE_PATH
-          rm -rf .git .github *.md transsion_pbrp_gen.py 2>/dev/null || true
+          # Run generator dengan vendor_boot.img
+          cd ${{ github.workspace }}/workspace
           
-          echo "✅ Device tree placed at: $DEVICE_PATH"
-          echo "📋 Device tree contents:"
-          ls -la ${{ github.workspace }}/workspace/$DEVICE_PATH/
+          if [ -f "${{ github.workspace }}/device-files/vendor_boot.img" ]; then
+            echo "🔧 Generating device tree from vendor_boot.img..."
+            python3 transsion_pbrp_gen.py \
+              "${{ github.workspace }}/device-files/vendor_boot.img" \
+              -o ${{ github.workspace }}/workspace/device \
+              --device-name "${MANUFACTURER}-${CODENAME}"
+          else
+            echo "❌ vendor_boot.img not found!"
+            exit 1
+          fi
+          
+          # Copy additional files if exist
+          if [ -f "${{ github.workspace }}/device-files/dtb.img" ]; then
+            cp ${{ github.workspace }}/device-files/dtb.img $DEVICE_PATH/prebuilt/
+          fi
+          
+          if [ -f "${{ github.workspace }}/device-files/kernel" ]; then
+            cp ${{ github.workspace }}/device-files/kernel $DEVICE_PATH/prebuilt/
+          fi
 
       # ==========================================
-      # STEP 4: Build PBRP
+      # BUILD PBRP
       # ==========================================
       - name: Build PBRP
         run: |
           cd ${{ github.workspace }}/workspace
           
-          MANUFACTURER="${{ github.event.inputs.device_manufacturer || 'infinix' }}"
-          CODENAME="${{ github.event.inputs.device_codename || 'X6885' }}"
+          CODENAME="${{ github.event.inputs.device_codename }}"
           
-          echo "🔨 Starting build for $MANUFACTURER $CODENAME..."
-          
-          # Source build environment
           source build/envsetup.sh
+          lunch pb_${CODENAME}-eng
           
-          # Lunch target
-          lunch pb_$CODENAME-eng
-          
-          # Build with ccache
           export USE_CCACHE=1
           export CCACHE_EXEC=/usr/bin/ccache
           
-          # Start build
-          mka -j$(nproc --all) ${{ github.event.inputs.build_type || 'recovery' }}image
-          
-          echo "✅ Build complete!"
+          mka -j$(nproc --all) ${{ github.event.inputs.build_type }}image
 
       # ==========================================
-      # STEP 5: Prepare Artifacts
+      # PACKAGE OUTPUT
       # ==========================================
-      - name: Prepare Artifacts
+      - name: Package Output
         run: |
-          cd ${{ github.workspace }}/workspace
+          CODENAME="${{ github.event.inputs.device_codename }}"
+          OUT_DIR="${{ github.workspace }}/workspace/out/target/product/$CODENAME"
+          PKG_DIR="${{ github.workspace }}/output"
           
-          MANUFACTURER="${{ github.event.inputs.device_manufacturer || 'infinix' }}"
-          CODENAME="${{ github.event.inputs.device_codename || 'X6885' }}"
-          DEVICE_PATH="device/$MANUFACTURER/$CODENAME"
-          BUILD_TYPE="${{ github.event.inputs.build_type || 'recovery' }}"
+          mkdir -p $PKG_DIR
           
-          # Create output directory
-          mkdir -p ${{ github.workspace }}/output
-          
-          # Find and copy built images
-          OUT_DIR="out/target/product/$CODENAME"
-          
-          if [ "$BUILD_TYPE" == "recovery" ]; then
-            # For recovery image
-            if [ -f "$OUT_DIR/recovery.img" ]; then
-              cp "$OUT_DIR/recovery.img" "${{ github.workspace }}/output/recovery.img"
-              echo "✅ Found recovery.img"
+          # Copy semua image yang dihasilkan
+          for img in vendor_boot recovery boot; do
+            if [ -f "$OUT_DIR/${img}.img" ]; then
+              cp "$OUT_DIR/${img}.img" "$PKG_DIR/"
+              echo "✅ Copied ${img}.img"
             fi
-            
-            # For vendor_boot + recovery (Android 12+)
-            if [ -f "$OUT_DIR/vendor_boot.img" ]; then
-              cp "$OUT_DIR/vendor_boot.img" "${{ github.workspace }}/output/vendor_boot.img"
-              echo "✅ Found vendor_boot.img"
-            fi
-            
-          elif [ "$BUILD_TYPE" == "boot" ]; then
-            if [ -f "$OUT_DIR/boot.img" ]; then
-              cp "$OUT_DIR/boot.img" "${{ github.workspace }}/output/boot.img"
-              echo "✅ Found boot.img"
-            fi
-            
-          elif [ "$BUILD_TYPE" == "vendorboot" ]; then
-            if [ -f "$OUT_DIR/vendor_boot.img" ]; then
-              cp "$OUT_DIR/vendor_boot.img" "${{ github.workspace }}/output/vendor_boot.img"
-              echo "✅ Found vendor_boot.img"
-            fi
-          fi
+          done
           
-          # Copy any .img files found
-          find $OUT_DIR -name "*.img" -type f -exec cp {} ${{ github.workspace }}/output/ \; 2>/dev/null || true
-          
-          # Create info file
-          cat > ${{ github.workspace }}/output/build_info.txt << EOF
-          Build Date: $(date '+%Y-%m-%d %H:%M:%S')
-          Device: $MANUFACTURER $CODENAME
-          Build Type: $BUILD_TYPE
-          PBRP Branch: ${{ env.MANIFEST_BRANCH }}
-          Commit: ${{ github.sha }}
-          Workflow Run: ${{ github.run_id }}
+          # Create flashable zip (optional)
+          cd $PKG_DIR
+          cat > flash.sh << 'EOF'
+          #!/bin/bash
+          # Flash script for PBRP
+          fastboot flash vendor_boot vendor_boot.img
+          fastboot reboot recovery
           EOF
+          chmod +x flash.sh
           
-          echo "📦 Output files:"
-          ls -lh ${{ github.workspace }}/output/
+          # Create info
+          cat > build-info.txt << EOF
+          Device: ${{ github.event.inputs.device_manufacturer }} ${{ github.event.inputs.device_codename }}
+          Build Date: $(date)
+          Build Type: ${{ github.event.inputs.build_type }}
+          PBRP Branch: ${{ env.MANIFEST_BRANCH }}
+          EOF
 
-      # ==========================================
-      # STEP 6: Upload Artifacts
-      # ==========================================
-      - name: Upload Build Artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: PBRP-${{ github.event.inputs.device_codename || 'X6885' }}-${{ github.run_number }}
+          name: PBRP-${{ github.event.inputs.device_codename }}-${{ github.run_number }}
           path: ${{ github.workspace }}/output/*
-          if-no-files-found: error
           retention-days: 30
 
-      # ==========================================
-      # STEP 7: Create Release (Optional)
-      # ==========================================
       - name: Create Release
-        if: github.event.inputs.upload_to_release == 'true' && github.event_name == 'workflow_dispatch'
+        if: github.event.inputs.build_type == 'vendorboot'
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: PBRP-${{ github.event.inputs.device_codename || 'X6885' }}-${{ github.run_number }}
-          name: PBRP for ${{ github.event.inputs.device_manufacturer || 'infinix' }} ${{ github.event.inputs.device_codename || 'X6885' }}
+          tag_name: PBRP-${{ github.event.inputs.device_codename }}-${{ github.run_number }}
+          name: PBRP ${{ github.event.inputs.device_codename }} Build ${{ github.run_number }}
           body: |
-            ## PBRP Build for ${{ github.event.inputs.device_manufacturer || 'infinix' }} ${{ github.event.inputs.device_codename || 'X6885' }}
+            ## PBRP for ${{ github.event.inputs.device_manufacturer }} ${{ github.event.inputs.device_codename }}
             
-            ### Build Information
-            - **Device:** ${{ github.event.inputs.device_manufacturer || 'infinix' }} ${{ github.event.inputs.device_codename || 'X6885' }}
-            - **Build Type:** ${{ github.event.inputs.build_type || 'recovery' }}
-            - **Build Date:** ${{ github.event.inputs.device_codename || 'X6885' }}
-            - **PBRP Branch:** ${{ env.MANIFEST_BRANCH }}
-            - **Commit:** ${{ github.sha }}
+            ### Files Included
+            - `vendor_boot.img` - Flash to vendor_boot partition
+            - `flash.sh` - Helper script for Linux/Mac
             
             ### Installation
-            1. Download the appropriate image for your device
-            2. Flash via fastboot: `fastboot flash ${{ github.event.inputs.build_type || 'recovery' }} <filename>.img`
-            3. Reboot to recovery: `fastboot reboot recovery`
+            ```bash
+            fastboot flash vendor_boot vendor_boot.img
+            fastboot reboot recovery
+            ```
             
-            ### Notes
-            - This is an automated build
-            - Test thoroughly before using
-            - Report issues to the device repository
-            
+            ### Build Info
+            - Date: ${{ github.event.head_commit.timestamp }}
+            - Commit: ${{ github.sha }}
           files: ${{ github.workspace }}/output/*
-          draft: false
           prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # ==========================================
-      # STEP 8: Cleanup
-      # ==========================================
-      - name: Cleanup
-        if: always()
-        run: |
-          echo "🧹 Cleaning up..."
-          rm -rf ${{ github.workspace }}/workspace
-          echo "✅ Cleanup complete"
