--- a/.github/workflows/generate-tree.yml
+++ b/.github/workflows/generate-tree.yml
@@ -22,6 +22,14 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
+    
+    - name: Verify script exists
+      run: |
+        if [ ! -f "transsion_twrp_gen_vendor_boot.py" ]; then
+          echo "ERROR: transsion_twrp_gen_vendor_boot.py tidak ditemukan!"
+          echo "Upload script ke root repo terlebih dahulu"
+          exit 1
+        fi
         
     - name: Download vendor_boot
       run: |
