--- a/.github/workflows/build-twrp.yml
+++ b/.github/workflows/build-twrp.yml
@@ -15,10 +15,15 @@ on:
           - twrp-12.1
           - twrp-11
           - twrp-13
+  push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/build-twrp.yml'
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - name: Checkout device tree
@@ -30,7 +35,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y bc bison build-essential ccache curl flex \
-          g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev \
+          g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses-dev \
           lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev \
           libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync \
           schedtool squashfs-tools xsltproc zip zlib1g-dev python3 python-is-python3 \
